--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 :root {
+  min-width: 320px;
   font: 16px system-ui, sans-serif;
-  background: hsl(263, 36%, 10%);
+  background: hwb(262 6% 86%);
   color: #fff;
 }
 
