--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ body {
   position: relative;
 }
 
+.no-overscroll {
+  overscroll-behavior-y: none;
+}
+
 a:hover {
   text-decoration: underline;
 }
